# Digital_Double_virtual_workforce

./: README.md  package-lock.json  package.json  pyproject.toml
digital_double/: README.md  package-lock.json  package.json  pyproject.toml
digital_double/core/: agent.py  task.py
digital_double/digital_double/: __init__.py
digital_double/digital_double/core/: agent.py  agent_types.py  config.py  orchestrator.py  prompts.py  task.py
digital_double/digital_double/core/api/: routes.py
digital_double/digital_double/core/prompts/: __init__.py  base.py  content.py  design.py  embedded.py  factory.py  finance.py  it_support.py  legal.py  marketing.py  mobile.py  templates.py
digital_double/digital_double/core/services/: agent_service.py  task_service.py
digital_double/digital_double/core/utils/: logger.py  metrics.py  validation.py
digital_double/examples/: agent_prompts_usage.py
digital_double/src/: App.tsx
digital_double/src/components/: AgentStats.tsx  CreateAgentDialog.tsx  Dashboard.tsx  LLMTest.tsx  Notifications.tsx  TaskAnalytics.tsx  TaskFilters.tsx  TaskPriority.tsx
digital_double/src/components/ui/: Button.tsx
digital_double/src/hooks/: useAgentMetrics.ts  useNotifications.ts  useTaskMetrics.ts
digital_double/src/tests/: AgentCard.test.tsx  Dashboard.test.tsx  LLMTest.test.tsx  TaskAnalytics.test.tsx
digital_double/src/types/: agent.ts
digital_double/tests/: __init__.py  conftest.py  test_agent.py  test_orchestrator.py  test_task.py
examples/: basic_usage.py
src/: App.tsx
src/components/: AgentCard.tsx  CreateTaskDialog.tsx  (+1 more)
(+3 files in other folders)
